add the movie db implementation to movieform and boxmovieform