@@ -3,8 +3,8 @@ version '1.0.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = '9'
-targetCompatibility = '9'
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 repositories {
 
@@ -40,6 +40,11 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.jtwig/jtwig-web
     compile group: 'org.jtwig', name: 'jtwig-web', version: '+'
+}
+
+compileJava {
+    
+    options.compilerArgs += ["--add-modules java.net.http"]
 }
 
 task fatJar(type: Jar) {
